--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,6 @@
 <br><br><br><br><br><br>
     <div class="container">
+      <h2>Novo Artigo</h2>
       <%= form_for @article, local: true do |form| %>
         <% if @article.errors.any? %>
             <div id="error_explanation">
