--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,28 +1,21 @@
 <br><br><br><br>
 <div class="container">
-<p>
+  <p>
     <strong>Titulo:</strong>
     <%= @article.title %>
-</p>
+  </p>
 
-<p>
+  <p>
     <strong>Texto:</strong>
     <%= @article.text %>
-</p>
-<h2>Add a comment:</h2>
-<%= form_for [ @article, @article.comments.build ], local: true do |form|%>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
   </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-<%= link_to 'Voltar', articles_path %>
-<%= link_to 'editar', edit_article_path(@article) %>
+
+  <h2>Comentários:</h2>
+    <%= render @article.comments %>
+
+  <h2>-Adicionar um comentario-</h2>
+    <%= render 'comments/form' %>
+
+        <%= link_to 'Voltar', articles_path %>
+        <%= link_to 'editar', edit_article_path(@article) %>
 </div>
