--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -5,8 +5,7 @@
         <% if @article.errors.any? %>
             <div id="error_explanation">
               <h2>
-                <%= pluralize(@article.errors.count, "Erros") %>, Este artigo não pode ser salvo
-                pois existem erros !!!
+                <%= pluralize(@article.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!
                 <% @article.errors.full_messages.each do |msg| %>
                   <li><%= msg %></li>
                 <% end %>
