--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,8 +32,9 @@ li a:hover {
 }
 
 .container {
-    margin-top: 10px;
+    margin-top: 70px;
     width: 1000px;
     margin-bottom: -50px;
+    margin-left: 350px;
 
 }
