--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,19 @@
-<p>
-  <strong>Usuario:</strong>
-  <%= comment.commenter %>
-</p>
-
-<p>
-  <strong>Comentario:</strong>
-  <%= comment.body %>
-</p>
-
-<p>
-  <% if current_user.id == comment.user_id %>
-    <%= link_to 'Apagar Comentario', article_comment_path(@article, comment),
-    method: :delete,
-    data: { confirm: 'Apagar o comentario ?' } %>
-  <% end %>
-</p>
+  <p>
+    <strong>Usuario:</strong>
+    <%= comment.commenter %>
+  </p>
+  <p>
+    <strong>Comentario:</strong>
+    <%= comment.body %>
+  </p>
+  <div class="row">
+    <% if current_user == comment.user %>
+      <div class="col s4">
+        <%= link_to 'editar', edit_article_comment_path(@article, comment) %>
+      </div>
+      <div class="col s4">
+        <%= link_to 'Apagar Comentario', article_comment_path(@article, comment),
+                method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
+      </div>
+    <% end %>
+  </div>
