--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <%= render 'form' %>
+  <%= render 'comments/form' %><br><br>
   <%= link_to 'Voltar', articles_path %>
 </div>
