--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="bemvindo"><br><br><br><br>
+        <div class="bemvindo">
             <label><h1>Bem Vindos ao Bloguerando!!!</h1></label>
         </div>
         <div>
