--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,16 @@
-    <div class="container">
+
       <h2>Novo Artigo</h2>
       <%= form_for @article, local: true do |form| %>
         <% if @article.errors.any? %>
             <div id="error_explanation">
-              <h2>
-                <%= pluralize(@article.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!
+              <h2><%= pluralize(@article.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!</h2>
+
+              <ul>
                 <% @article.errors.full_messages.each do |msg| %>
                   <li><%= msg %></li>
                 <% end %>
-              </h2>
+              </ul>
+
             </div>
         <% end %>
             <p>
@@ -24,4 +26,4 @@
               <%= form.submit "Criar Artigo", class:"btn btn-outline-dark" %>
             </p>
       <% end %>
-    </div>
+
