--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,19 +1,19 @@
-  <p>
-    <strong>Usuario:</strong>
-    <%= comment.commenter %>
-  </p>
-  <p>
-    <strong>Comentario:</strong>
-    <%= comment.body %>
-  </p>
+<p>
+  <strong>Usuario:</strong>
+  <%= comment.commenter %>
+</p>
+<p>
+  <strong>Comentario:</strong>
+  <%= comment.body %>
+</p>
   <div class="row">
-    <% if current_user == comment.user %>
+    <% if !comment.new_record? %>
       <div class="col s4">
         <%= link_to 'editar', edit_article_comment_path(@article, comment) %>
       </div>
       <div class="col s4">
         <%= link_to 'Apagar Comentario', article_comment_path(@article, comment),
-                method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
+            method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
       </div>
     <% end %>
-  </div>
+</div>
