navbar, footer, bootstrap

--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,9 +1,13 @@
-<p>
-  <strong>Usuario:</strong>
-  <%= comment.commenter %>
-</p>
+<div class="row">
+  <div class="col-12">
+    <p>
+      <strong>Usuario:</strong>
+        <%= comment.commenter %>
+    </p>
 
-<p>
-  <strong>Comentario:</strong>
-  <%= comment.body %>
-</p>
+    <p>
+      <strong>Comentario:</strong>
+        <%= comment.body %>
+    </p>
+  </div>
+</div>
