--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,25 +1,39 @@
-<div class="container">
-<p>
-<strong>Titulo:</strong>
-<%= @article.title %>
-</p>
+<div class="row mt-4">
+  <div class="col-12">
+    <p>
+      <strong>Titulo:</strong>
+    </p>
+
+    <p>
+      <%= @article.title %>
+    </p>
+
+    <p>
+      <strong>Texto:</strong>
+    </p>
+
+    <p>
+     <%= @article.text %>
+    </p>
+    <div class="row">
+      <div class="col-12">
+
+        <h2>Comentários:</h2>
+        <%= render @article.comments %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h2>-Adicionar um comentario-</h2>
+        <%= render 'comments/form' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 mt-4">
+        <%= link_to 'Voltar', articles_path %>
+        <%= link_to 'editar', edit_article_path(@article, @comment) %>
+      </div>
+    </div>
+  </div>
 </div>
-
-<p>
-<strong>Texto:</strong>
-<%= @article.text %>
-</p>
-
-
-<h2>Comentários:</h2>
-<%= render @article.comments %>
-
-
-<h2>-Adicionar um comentario-</h2>
-<%= render 'comments/form' %>
-
-<%= link_to 'Voltar', articles_path %>
-<%= link_to 'editar', edit_article_path(@article, @comment) %>
-</div>
-
 
