--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,12 +1,22 @@
 @import "bootstrap"
 body
+  position: relative
   background-color: #eeeeee
+  height: 100%
 
+.app-container
+  height: 100%
+  min-height: 100vh
+  padding-bottom: 100px
 
 /* Change the link color to #111 (black) on hover */
+footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  height: 100px
+  background: #e4e4e4
+  text-align: center
 
-.container
-  margin-top: 70px
-  width: 1000px
-  margin-bottom: -50px
-  margin-left: 350px
+.bg-light
+    background-color: #4b9cec !important
