--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,29 +1,41 @@
-<h1>Lista de Artigos</h1>
-<div class="container">
-  <table>
-    <tr>
-      <th>Titulo</th>
-      <th>Texto</th>
-      <th colspan = "2"></th>
-    </tr>
-
-    <% @article.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.text %></td>
-      </tr>
-      <tr>
-        <td><%= link_to 'Mostrar', article_path(article) %></td>
-        <% if current_user == article.user %>
-          <td><%= link_to 'editar', edit_article_path(article) %></td>
-          <td><%= link_to 'Deletar', article_path(article),
-            method: :delete,
-              data: { confirm: 'Tem Certeza que deseja deletar ?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-
-  </table>
-    <%= link_to 'Pagina Inicial', root_path %>
-    <%= link_to 'Criar Novo Artigo', new_article_path %>
+<div class="container mt-4">
+  <h1>Lista de Artigos</h1>
+  <div class="row mt-4">
+    <div class="col-12">
+      <table>
+        <tr>
+          <th>Titulo</th>
+          <th>Texto</th>
+          <th colspan = "2"></th>
+        </tr>
+        <% @article.each do |article| %>
+          <tr>
+            <td><%= article.title %></td>
+            <td><%= article.text %></td>
+          </tr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+        <tr>
+          <td><%= link_to 'Mostrar', article_path(article) %></td>
+          <% if current_user == article.user %>
+            <td><%= link_to 'editar', edit_article_path(article) %></td>
+            <td><%= link_to 'Deletar', article_path(article),
+              method: :delete,
+                data: { confirm: 'Tem Certeza que deseja deletar ?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </table>
+    </div>
+  </div>
+    <div class="row mt-4">
+      <div class="col-4">
+        <%= link_to 'Pagina Inicial', root_path %>
+      </div>
+      <div class="col-4">
+        <%= link_to 'Criar Novo Artigo', new_article_path %>
+      </div>
+  </div>
 </div>
