--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,27 +1,34 @@
-<div class="container">
-  <%= form_for [ @article, @comment ], local: true do |form|%>
-      <% if @comment.errors.any? %>
+
+  <%= form_for @article.comments.new, url: article_comments_path(@article), local: true do |form|%>
+      <% if form.object.errors.any? %>
         <div id="error_explanation">
          <h2>
-           <%= pluralize(@comment.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!
-             <% @comment.errors.full_messages.each do |msg| %>
+           <%= pluralize(form.object.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!
+             <% form.object.errors.full_messages.each do |msg| %>
              <li><%= msg %></li>
             <% end %>
           </h2>
         </div>
       <% end %>
-        <p>
-         <%= form.label :commenter, 'Usuario' %><br>
-         <%= form.text_field :commenter, size: "50x10" %>
-        </p>
-        <p>
-         <%= form.label :body, 'Comentário' %><br>
-         <%= form.text_area :body, size: "50x10" %>
-        </p>
       <div class="row">
-        <div class="col s12">
+        <div class="col-12">
+          <p>
+           <%= form.label :commenter, 'Usuario' %><br>
+           <%= form.text_field :commenter %>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <p>
+           <%= form.label :body, 'Comentário' %><br>
+           <%= form.text_area :body %>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
            <%= form.submit "Adicionar Comentario", class:"btn btn-outline-dark" %>
         </div>
       </div>
   <% end %>
-</div>
