--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,43 +9,60 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <%= link_to root_path, class: "nav-link" do %>
-              Home <span class="sr-only">(current)</span>
+    <div class="app-container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <%= link_to root_path, class: "nav-link" do %>
+                Home <span class="sr-only">(current)</span>
+              <% end %>
+              <a  href="#"> </a>
+            </li>
+          </ul>
+            <ul class="navbar-nav">
+          <% if !user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to 'Entrar',  new_user_session_path, class: 'nav-link'  %>
+              <li class="nav-item">
+                <%= link_to 'Cadastrar-se', new_user_registration_path, class: 'nav-link' %>
+              </li>
+          <% end %>
+            <% if user_signed_in? %>
+              <li class="nav-item" style="float: right">
+                <%= User.name  %>
+              </li>
+              <li class="nav-item" style="float: right">
+              <%= link_to 'Sair',  destroy_user_session_path, class: 'nav-link'  %>
+              </li>
             <% end %>
-            <a  href="#"> </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to 'Entrar',  new_user_session_path, class: 'nav-link'  %>
-          <li class="nav-item">
-            <%= link_to 'Cadastrar-se', new_user_registration_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item" style="float: right">
-            <%= link_to 'Sair',  destroy_user_session_path, class: 'nav-link'  %>
-          </li>
-          </li>
-        </ul>
-      </div>
-    </nav>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    <% flash.each do |name, msg| %>
-       <div class="alert alert-<%= name == 'notice' ? 'success' : 'danger'%>">
-          <%= msg %>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <% flash.each do |name, msg| %>
+         <div class="alert alert-<%= name == 'notice' ? 'success' : 'danger'%>">
+            <%= msg %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
+
+      <div class="container">
+        <%= yield %>
       </div>
-    <% end %>
-      <%= yield %>
+
+      <footer>
+        <div class="row mt-4">
+          <div class="col-12">
+            <p>
+              Este blog é um pojeto pessoal criado para meu apredizado :)
+            </p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
