navbar, footer, bootstrap, user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <% end %>
             <% if user_signed_in? %>
               <li class="nav-item" style="float: right">
-                <%= User.name  %>
+                <%= current_user.email  %>
               </li>
               <li class="nav-item" style="float: right">
               <%= link_to 'Sair',  destroy_user_session_path, class: 'nav-link'  %>
