--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,7 @@
-
-  <%= render 'form' %>
-  <%= link_to 'Voltar', articles_path %>
+<div class="row mt-4">
+  <div class="col-12">
+    <%= render 'form' %>
+    <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm" %>
+  </div>
+</div>
 
