--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,8 +30,8 @@
     </div>
     <div class="row">
       <div class="col-12 mt-4">
-        <%= link_to 'Voltar', articles_path %>
-        <%= link_to 'editar', edit_article_path(@article, @comment) %>
+        <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm" %>
+        <%= link_to 'editar', edit_article_path(@article, @comment), class:"btn btn-warning btn-sm" %>
       </div>
     </div>
   </div>
