--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,5 @@
 @import "bootstrap"
+
 body
   position: relative
   background-color: #eeeeee
@@ -20,3 +21,7 @@ footer
 
 .bg-light
     background-color: #4b9cec !important
+
+.nome_user
+  display: flex
+  align-items: center
