--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row mt-4">
   <div class="col-12">
     <p>
-      <strong>Usuario:</strong>
-        <%= comment.commenter %>
+      <strong><%= current_user.email  %></strong>
+
     </p>
 
     <p>
