--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,10 +18,10 @@
   <div class="row">
     <div class="col-12">
         <tr>
-          <td><%= link_to 'Mostrar', article_path(article) %></td>
+          <td><%= link_to 'Mostrar', article_path(article), class:"btn btn-primary btn-sm" %></td>
           <% if current_user == article.user %>
-            <td><%= link_to 'editar', edit_article_path(article) %></td>
-            <td><%= link_to 'Deletar', article_path(article),
+            <td><%= link_to 'editar', edit_article_path(article), class:"btn btn-warning btn-sm" %></td>
+            <td><%= link_to 'Deletar', article_path(article), class:"btn btn-danger btn-sm",
               method: :delete,
                 data: { confirm: 'Tem Certeza que deseja deletar ?' } %></td>
           <% end %>
@@ -32,10 +32,10 @@
   </div>
     <div class="row mt-4">
       <div class="col-4">
-        <%= link_to 'Pagina Inicial', root_path %>
+        <%= link_to 'Pagina Inicial', root_path, class:"btn btn-outline-dark" %>
       </div>
       <div class="col-4">
-        <%= link_to 'Criar Novo Artigo', new_article_path %>
+        <%= link_to 'Criar Novo Artigo', new_article_path, class:"btn btn-success" %>
       </div>
   </div>
 </div>
