--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,7 @@
 <div class="row">
   <div class="col-12">
     <p>
-      <strong>Usuario:</strong>
-      <%= comment.commenter %>
+      <strong><%= current_user.email  %></strong>
     </p>
     <p>
       <strong>Comentario:</strong>
@@ -11,10 +10,10 @@
     <% if !comment.new_record? %>
       <div class="row mb-4">
         <div class="col-4">
-          <%= link_to 'editar', edit_article_comment_path(@article, comment) %>
+          <%= link_to 'editar', edit_article_comment_path(@article, comment), class:"btn btn-warning btn-sm" %>
         </div>
         <div class="col-4">
-          <%= link_to 'Apagar Comentario', article_comment_path(@article, comment),
+          <%= link_to 'Apagar Comentario', article_comment_path(@article, comment), class:"btn btn-danger btn-sm",
               method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
         </div>
       </div>
