--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,19 +10,19 @@
           </h2>
         </div>
       <% end %>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <p>
            <%= form.label :commenter, 'Usuario' %><br>
            <%= form.text_field :commenter %>
           </p>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-6">
           <p>
            <%= form.label :body, 'Comentário' %><br>
-           <%= form.text_area :body %>
+           <%= form.text_area :body, size: "50x10" %>
           </p>
         </div>
       </div>
