slug e bootstrap(forms)

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -10,6 +10,8 @@ body
   min-height: 100vh
   padding-bottom: 100px
 
+.container
+
 /* Change the link color to #111 (black) on hover */
 footer
   position: absolute
@@ -20,7 +22,7 @@ footer
   text-align: center
 
 .bg-light
-    background-color: #4b9cec !important
+    background-color: #aaa9ab !important
 
 .nome_user
   display: flex
