--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,11 @@
 <div class="row mt-4">
   <div class="col-12">
     <%= render 'form' %>
-    <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm" %>
+    <div class="form_group">
+      <div class="col-2">
+        <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm form-control" %>
+      </div>
+    </div>
   </div>
 </div>
 
