--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -25,13 +25,41 @@
     <div class="row">
       <div class="col-12">
         <h2>-Adicionar um comentario-</h2>
-        <%= render 'comments/form' %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 mt-4">
-        <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm" %>
-        <%= link_to 'editar', edit_article_path(@article, @comment), class:"btn btn-warning btn-sm" %>
+        <%= form_for @article.comments.new, url: article_comments_path(@article), local: true do |form|%>
+          <% if form.object.errors.any? %>
+            <div id="error_explanation">
+             <h2>
+               <%= pluralize(form.object.errors.count, "Erros") %>, Este artigo não pode ser salvo pois existem erros !!!
+                 <% form.object.errors.full_messages.each do |msg| %>
+                 <li><%= msg %></li>
+                <% end %>
+              </h2>
+            </div>
+          <% end %>
+              <div class="form-group">
+                <div class="col-6">
+                  <p>
+                   <%= form.label :body, 'Comentário' %><br>
+                   <%= form.text_area :body, size: "50x10", class:"form-control" %>
+                  </p>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-6">
+                   <%= form.submit "Adicionar Comentario", class:"btn btn-outline-dark form-control" %>
+                </div>
+              </div>
+        <% end %>
+        <div class="form-group col-6">
+          <div class="row">
+            <div class="col-6">
+              <%= link_to 'editar', edit_article_path(@article, @comment), class:"btn btn-warning btn-sm form-control" %>
+            </div>
+            <div class="col-6">
+              <%= link_to 'Voltar', articles_path, class:"btn btn-dark btn-sm form-control" %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
