--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,9 +4,9 @@ body
   position: relative
   background-color: #eeeeee
   height: 100%
+  width: 100%
 
 .app-container
-  height: 100%
   min-height: 100vh
   padding-bottom: 100px
 
