--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,22 +1,24 @@
 <div class="row">
   <div class="col-12">
     <p>
-      <strong><%= current_user.email  %></strong>
+      <strong><%= comment.user.email  %></strong>
     </p>
     <p>
       <strong>Comentario:</strong>
       <%= comment.body %>
     </p>
-    <% if !comment.new_record? %>
-      <div class="row mb-4">
-        <div class="col-4">
-          <%= link_to 'editar', edit_article_comment_path(@article, comment), class:"btn btn-warning btn-sm" %>
+    <% if current_user == comment.user %>
+      <% if !comment.new_record? %>
+        <div class="row mb-4">
+          <div class="col-4">
+            <%= link_to 'editar', edit_article_comment_path(@article, comment), class:"btn btn-warning btn-sm" %>
+          </div>
+          <div class="col-4">
+            <%= link_to 'Apagar Comentario', article_comment_path(@article, comment), class:"btn btn-danger btn-sm",
+                method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
+          </div>
         </div>
-        <div class="col-4">
-          <%= link_to 'Apagar Comentario', article_comment_path(@article, comment), class:"btn btn-danger btn-sm",
-              method: :delete, data: { confirm: 'Apagar o comentario ?' } %>
-        </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
